# Cache

./: CMakeLists.txt  README.md  makefile
LFU/include/: LFU.hpp
LFU/src/: LFU.cpp
PC/include/: perfect_cache.hpp
PC/src/: perfect_cache.cpp
include/: LFU.hpp  perfect_cache.hpp
src/: LFU.cpp  perfect_cache.cpp
test/: perfect_cache.sh  test.cpp  test.sh  test.txt  test10.datPC.ans  test_02.dat.ans
